# agentic_ai

./: README.md  pyproject.toml
notebook/: blood_work.txt
streamlit_app/: app.py
