[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=0.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.6",
]

